k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-cancel-request-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80 # Adapt to the port of your ingress gateway
      name: http2
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-cancel-request
spec:
  hosts:
  - "*"
  gateways:
  - istio-cancel-request-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-cancel-request
        port:
          number: 8080
